# smolclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IDENTITY.md  LAUNCH_SPEC.md  LICENSE  MEMORY.md  Makefile  README.md  SOUL.md  USER.md  crons.yaml  demo.yaml  demo_setup.py  deploy.sh  install.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  claude-code-review.yml  python-doctor.yml  release.yml
docs/: index.html  pre-release-audit.md
scripts/: demo_setup.py
skills/health-coach/: SKILL.md
smolclaw/: __init__.py  agent.py  agent_tools.py  auth.py  browser.py  claude_code.py  config.py  daemon.py  doctor.py  handlers.py  handlers_commands.py  handover.py  handover_builder.py  history.py  main.py  prompt_builder.py  scheduler.py  session_state.py  setup.py  setup_services.py  skills.py  subconscious.py  tool_loader.py  tools.py  tools_browser.py  tools_sdk.py  tui.py  version.py  watchdog.sh  workspace.py
specs/: SUBAGENTS.md
templates/: AGENT.md  AGENTS.md  HEARTBEAT.md  SOUL.md  SUBCONSCIOUS.md  USER.md  crons.yaml
templates/skills/cli-learning/: SKILL.md
templates/skills/handover/: SKILL.md
templates/skills/skill-creation/: SKILL.md
templates/skills/tool-building/: SKILL.md
tests/: test_agent.py  test_auth.py  test_config.py  test_daemon.py  test_doctor.py  test_handlers.py  test_scheduler.py  test_session_state.py  test_skills.py  test_subconscious.py  test_tool_loader.py  test_tools.py  test_tools_sdk.py  test_version.py  test_workspace.py
tools/: example_weather.py.disabled
