[project]
name = "smolclaw"
version = "0.2.0"
description = "Self-hosted Telegram AI agent. 10 tools, skills, heartbeat, CLI learning."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "SmolClaw Contributors"}]
dependencies = [
    "python-telegram-bot>=20.0",
    "smolagents[litellm,toolkit]>=1.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "loguru>=0.7.0",
    "questionary>=2.0.0",
    "typer>=0.24.1",
]

[project.scripts]
smolclaw = "smolclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smolclaw", "templates"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
