[project]
name = "smolclaw"
version = "0.4.8"
description = "Self-hosted Telegram AI agent. 10 tools, skills, heartbeat, CLI learning."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "SmolClaw Contributors"}]
dependencies = [
    "python-telegram-bot>=20.0",
    "claude-agent-sdk>=0.1.44",
    "apscheduler>=3.10.0",
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "loguru>=0.7.0",
    "questionary>=2.0.0",
    "typer>=0.24.1",
    "playwright>=1.40.0",
    "edge-tts>=6.1.0",
]

[project.scripts]
smolclaw = "smolclaw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smolclaw", "templates"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]

